feat: api product list
